# d-atacom

./: .gitignore  README.md  pyproject.toml  requirement.txt  setup.py
cremini_rl/: experiment.py  launch_omnisafe.py  omnisafe_experiment.py  run.py
cremini_rl/algorithms/: __init__.py  atacom_iqn_sac.py  baselineatacom_sac.py  cbf_sac.py  datacom_sac.py  gaussian_atacom_sac.py  iqn_datacom_sac.py  lag_sac.py  safe_layer_td3.py  wcsac.py
cremini_rl/configs/: atacom_sac_docking2d.yaml  atacom_sac_static_goal_navigation.yaml  atacom_sac_tiago_navigation.yaml  datacom_sac_air_hockey.yaml  datacom_sac_cartpole.yaml  datacom_sac_goal_navigation.yaml  datacom_sac_planar_air_hockey.yaml  iqn_atacom_sac_goal_navigation.yaml  iqn_atacom_sac_planar_air_hockey.yaml  lag_sac_cartpole.yaml  lag_sac_docking2d.yaml  lag_sac_planar_air_hockey.yaml  lag_sac_tiago_navigation.yaml  sac_planar_air_hockey.yaml  safelayer_td3_planar_air_hockey.yaml  wc_lag_sac_cartpole.yaml  wc_lag_sac_docking2d.yaml  wc_lag_sac_planar_air_hockey.yaml  wc_lag_sac_tiago_navigation.yaml
cremini_rl/configs/defaults/: atacom.yaml  (+7 more)
cremini_rl/dynamics/: __init__.py  cartpole_dynamics.py  dynamics.py  goal_navigation_dynamics.py  moving_obs_dynamics.py  tiago_navigation_dynamics.py
cremini_rl/envs/: __init__.py  air_hockey_env.py  ballnd_env.py  cartpole_goal_env.py  goal_navigation_env.py  moving_obs.py  omnisafe_wrapper.py  tiago_navigation_env.py
cremini_rl/utils/: agent_builder.py  constraint_replay_memory.py  networks.py  null_space.py  plot.py  replay_agent.py  replay_omnisafe.py  safe_core.py
(+29 files in other folders)
